# energy-mesh-python

./: .gitignore  LICENSE  LICENSE.md  README.md  api.html  async_connection.html  authentication.html  build.py  common.html  concepts.html  connection.html  credentials.html  examples.html  external_auth.html  faq.html  genindex.html  glossary.html  hydsim.html  index.html  installation.html  intro.html  introduction_to_mesh.html  kerberos.html  mesh_availability.html  mesh_client.html  mesh_concepts.html  mesh_functions.html  mesh_modelling.html  mesh_object_attributes.html  mesh_rating_curve.html  mesh_relations.html  mesh_search.html  mesh_server.html  mesh_session.html  mesh_xy_sets.html  news.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  (+9 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  release_preparation.yaml
.github/workflows/: Usage.yml  build_and_test.yml  development.yml  lint.yml  long_tests.yml  pages.sh  pages.yml  usage.yml
.github/workflows/install_dev_env/: action.yml
_downloads/3668d7c17a76fc0f7fce4bd93aae8059/: use_cases.py
_modules/: async_connection.html  common.html  connection.html  credentials.html  index.html  timeserie.html
_modules/volue/mesh/: _attribute.html  _authentication.html  _base_connection.html  _base_session.html  _common.html  _connection.html  _credentials.html  _object.html  _timeserie.html  _timeseries.html  _timeseries_resource.html
_modules/volue/mesh/aio/: _connection.html
_modules/volue/mesh/availability/: _base_availability.html
_modules/volue/mesh/calc/: common.html  forecast.html  history.html  statistical.html  transform.html
_modules/volue/mesh/examples/: connect_asynchronously.html  connect_synchronously.html  edit_timeseries_points.html  edit_timeseries_points_async.html  get_timeseries_points.html  get_timeseries_points_async.html  get_version.html  quickstart.html  read_timeseries_points.html  read_timeseries_points_async.html  timeseries_operations.html  write_timeseries_points.html  write_timeseries_points_async.html
_modules/volue/mesh/tests/: test_aio_connection.html  test_authentication.html  test_connection.html  test_examples.html  test_session.html  test_timeseries.html
_sources/: api.rst.txt  async_connection.rst.txt  authentication.rst.txt  common.rst.txt  examples.rst.txt  faq.rst.txt  glossary.rst.txt  index.rst.txt  installation.rst.txt  intro.rst.txt  introduction_to_mesh.rst.txt  mesh_availability.rst.txt  mesh_client.rst.txt  mesh_concepts.rst.txt  mesh_functions.rst.txt  mesh_modelling.rst.txt  mesh_relations.rst.txt  mesh_search.rst.txt  mesh_server.rst.txt  news.rst.txt  quickstart.rst.txt  tests.rst.txt  time_zone_aware_timeseries.rst.txt  timeseries.rst.txt  usecases.rst.txt  versions.rst.txt
_static/: documentation_options.js
docs/: development-schedule.md  make.bat
docs/source/: api.rst  attributes.rst  authentication.rst  concepts.rst  conf.py  connection.rst  credentials.rst  examples.rst  external_auth.rst  faq.rst  functions.rst  glossary.rst  hydsim.rst  index.rst  installation.rst  intro.rst  introduction_to_mesh.rst  kerberos.rst  mesh_availability.rst  mesh_client.rst  mesh_concepts.rst  mesh_functions.rst  mesh_modelling.rst  mesh_object_attributes.rst  mesh_rating_curve.rst  mesh_search.rst  mesh_server.rst  mesh_session.rst  mesh_xy_sets.rst  news.rst  quickstart.rst  schedule.md  search.rst  tests.rst  time_zone_aware_timeseries.rst  timeserie.rst  timeseries.rst  usecases.rst  versions.rst
examples/: 1_get_version.py  2a_get_timeseries_points.py  2b_get_timeseries_points_async.py  3a_edit_timeseries_points.py  3b_edit_timeseries_points_async.py  connect_asynchronously.py  connect_synchronously.py  quickstart.py  timeseries_with_numpy_and_pandas.py
examples/mesh/: 1_get_version.py  2_get_timeseries_points.py  2a_get_timeseries_points.py  2b_get_timeseries_points_async.py  3_get_timeseries_points_async.py  3a_edit_timeseries_points.py  3b_edit_timeseries_points_async.py  4_edit_timeseries_points.py
examples/mesh/utility/: print.py  test_data.py
examples/utility/: print.py  test_data.py
src/volue/: __init__.py
src/volue/examples/: __init__.py  connect_asynchronously.py  connect_synchronously.py  edit_timeseries_points.py  edit_timeseries_points_async.py  get_timeseries_points.py  get_timeseries_points_async.py  get_version.py  quickstart.py  timeseries_with_numpy_and_pandas.py
src/volue/examples/utility/: print.py  test_data.py
src/volue/mesh/: __init__.py  _attribute.py  _authentication.py  _availability.py  _base_availability.py  _base_connection.py  _base_session.py  _common.py  _connection.py  _credentials.py  _mesh_id.py  _object.py  _timeserie.py  _timeseries.py  _timeseries_resource.py  _version_compatibility.py  async_connection.py  common.py  connection.py  credentials.py  read_timeseries_points 2.py  test_import_export.py  timeserie.py
src/volue/mesh/aio/: __init__.py  _availability.py  _connection.py
src/volue/mesh/availability/: __init__.py  _availability.py  _availability_aio.py  _base_availability.py
src/volue/mesh/calc/: __init__.py  common.py  forecast.py  history.py  misc.py  statistical.py  transform.py
src/volue/mesh/cert/: server_self_signed_crt.pem
src/volue/mesh/client/: mesh_client.py
src/volue/mesh/examples/: __init__.py  auction_bidding.py  authorization.py  availability.py  check_duplicated_time_series.py  connect_asynchronously.py  connect_synchronously.py  connect_using_external_access_token.py  convert_to_time_zone_aware_timeseries.py  create_physical_timeseries.py  edit_timeseries_points.py  helpers.py  (+27 more)
src/volue/mesh_examples/: 1_get_version.py  2_get_timeseries_points.py  3_get_timeseries_points_async.py  hello_world.py
src/volue/tests/: __init__.py  test_examples.py  test_session.py  test_timeseries.py
tests/: all_tests.py  server_config.py  session_tests.py  test.py  test_all.py  test_examples.py  test_session.py  test_timeseries.py  test_utilities.py  timeseries_tests.py
tests/mesh/: session_tests.py
tests/mesh_service_tests/: session_tests.py  timeseries_tests.py
(+54 files in other folders)
