[tool.poetry]
name = "volue.mesh"
version = "1.1.0"
description = ""
license = "Proprietary"
authors = ["Volue AS"]
readme = "README.md"
homepage = "https://github.com/Volue-Public/energy-mesh-python"
repository = "https://github.com/Volue-Public/energy-mesh-python"
packages = [
    { include = "volue", from = "src" }
]
# By default Poetry doesn't package files in .gitignore.
include = [
    "src/volue/mesh/proto/core/v1alpha/core_pb2.py",
    "src/volue/mesh/proto/core/v1alpha/core_pb2_grpc.py",
    "src/volue/mesh/proto/type/resources_pb2.py",
    "src/volue/mesh/proto/type/resources_pb2_grpc.py"
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"  # pandas requires python 3.7.1 or above, numpy (one of the dependencies) requires python below 3.11
grpcio = "^1.37.0"
pyarrow = ">=7.0.0"
protobuf = ">=3.20.1"
winkerberos = { version = "^0.8.0", markers = "sys_platform == 'win32'" }
kerberos = { version = "^1.3.1", markers = "sys_platform == 'linux'" }
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
grpcio-tools = "^1.37.0"
Sphinx = "^4.0.2"
sphinx-rtd-theme = "^0.5.2"
rtd = "^1.2.3"
flake8 = "^3.9.2"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
pandas = "^1.3.4"
sphinx_copybutton = ">=0.4.0"
pylint = "^2.12.2"
black = ">=23.1.0"

[tool.pytest.ini_options]
markers = [
    "database: Tests that require a running mesh server with a database cache with data. Warning: might read/write to db.",
    "server: Tests that require a running mesh server.",
    "examples: Tests that run the examples.",
    "unittest: Tests that do NOT require a mesh server.",
    "authentication: Tests that require a running mesh server with Kerberos authentication.",
]

[build-system]
requires = [
    "poetry-core>=1.0.3",
    "grpcio-tools>=1.37.0"
]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build.py"
generate-setup-file = false
