[tool.poetry]
name = "volue.mesh"
version = "1.10.0-dev"
description = ""
license = "Proprietary"
authors = ["Volue AS"]
readme = "README.md"
homepage = "https://github.com/Volue-Public/energy-mesh-python"
repository = "https://github.com/Volue-Public/energy-mesh-python"
packages = [
    { include = "volue", from = "src" }
]
# By default Poetry doesn't package files in .gitignore.
include = [
    "src/volue/mesh/proto/auth/v1alpha/auth_pb2.py",
    "src/volue/mesh/proto/auth/v1alpha/auth_pb2_grpc.py",
    "src/volue/mesh/proto/calc/v1alpha/calc_pb2.py",
    "src/volue/mesh/proto/calc/v1alpha/calc_pb2_grpc.py",
    "src/volue/mesh/proto/config/v1alpha/config_pb2.py",
    "src/volue/mesh/proto/config/v1alpha/config_pb2_grpc.py",
    "src/volue/mesh/proto/hydsim/v1alpha/hydsim_pb2.py",
    "src/volue/mesh/proto/hydsim/v1alpha/hydsim_pb2_grpc.py",
    "src/volue/mesh/proto/model/v1alpha/model_pb2.py",
    "src/volue/mesh/proto/model/v1alpha/model_pb2_grpc.py",
    "src/volue/mesh/proto/model/v1alpha/resources_pb2.py",
    "src/volue/mesh/proto/model/v1alpha/resources_pb2_grpc.py",
    "src/volue/mesh/proto/model_definition/v1alpha/model_definition_pb2.py",
    "src/volue/mesh/proto/model_definition/v1alpha/model_definition_pb2_grpc.py",
    "src/volue/mesh/proto/model_definition/v1alpha/resources_pb2.py",
    "src/volue/mesh/proto/model_definition/v1alpha/resources_pb2_grpc.py",
    "src/volue/mesh/proto/session/v1alpha/session_pb2.py",
    "src/volue/mesh/proto/session/v1alpha/session_pb2_grpc.py",
    "src/volue/mesh/proto/time_series/v1alpha/time_series_pb2.py",
    "src/volue/mesh/proto/time_series/v1alpha/time_series_pb2_grpc.py",
    "src/volue/mesh/proto/type/resources_pb2.py",
    "src/volue/mesh/proto/type/resources_pb2_grpc.py"
]

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
grpcio = ">=1.37.0, <=1.66.1"
pyarrow = ">=7.0.0"
protobuf = ">=3.20.1, <=5.27.2"
winkerberos = { version = ">=0.9.1", markers = "sys_platform == 'win32'" }
kerberos = { version = "^1.3.1", markers = "sys_platform == 'linux'" }
bidict = ">=0.23.1"
python-dateutil = "^2.8.2"
# six is a dependency of dateutil
# version 1.16.0 is required for Python 3.12, see:
# https://bugzilla.mozilla.org/show_bug.cgi?id=1857492
six = "^1.16.0"

[tool.poetry.dev-dependencies]
grpcio-tools = ">=1.37.0, <=1.66.1"
Sphinx = ">=5.0.2"
sphinx-rtd-theme = "^0.5.2"
rtd = "^1.2.3"
flake8 = "^3.9.2"
pytest = "^7.1.2"
pytest-asyncio = "0.21.2"
pandas = ">=1.3.4"
sphinx_copybutton = ">=0.4.0"
pylint = "^2.12.2"
black = ">=23.1.0"

[tool.pytest.ini_options]
markers = [
    "database: Tests that require a running Mesh server with a test model named SimpleThermalTestModel. Warning: might read/write to db.",
    "server: Tests that require a running Mesh server.",
    "examples: Tests that run the examples.",
    "unittest: Tests that do NOT require a Mesh server.",
    "authentication: Tests that require a running Mesh server with Kerberos authentication.",
    "long: Long tests, longer than a minute.",
]

[build-system]
requires = [
    "poetry-core>=1.9.0",
    "grpcio-tools>=1.37.0, <=1.66.1"
]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build.py"
generate-setup-file = false
